--- a/SharpMod.Node/views/layout.jade
+++ b/SharpMod.Node/views/layout.jade
@@ -1,18 +1,18 @@
 ﻿doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title SharpMod
-    link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
-    script(src='/javascripts/modernizr-2.6.2.js')
-  body
-    .container.body-content
-      block content
-
-    script(src='/javascripts/jquery-1.10.2.js')
-    script(src='/javascripts/bootstrap.js')
-    script(src='/javascripts/respond.js')
+    head
+        meta(charset='utf-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1.0')
+        title SharpMod
+        link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap.min.css')
+        link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
+        script(src='/javascripts/modernizr-2.6.2.js')
+    body
+        div.container.body-content
+            block content
+        
+        script(src='/javascripts/jquery-2.1.3.js')
+        script(src='/javascripts/bootstrap.js')
+        script(src='/javascripts/respond.js')
 
     block scripts
