--- a/SharpMod.Node/views/chat.jade
+++ b/SharpMod.Node/views/chat.jade
@@ -13,9 +13,28 @@ block content
         strong.
             Emoticons have been successfully loaded.
 
-    h1 #{CurrentChannel}
+    div.alert.alert-warning#loadingBadgesMessage(role="alert")
+        strong.
+            Badges are currently loading.
+
+    div.alert.alert-success.alert-dismissable#successBadgesMessage(role="alert", style="display:none")
+        button(type="button", class="close", data-dismiss="alert", aria-label="Close")
+            span(aria-hidden="true").
+                &times;
+        strong.
+            Badges have been successfully loaded.
+
+    h1#channel #{CurrentChannel}
     
     div#messages
+
+    nav.navbar.navbar-default.navbar-fixed-bottom
+        div.container
+            div.navbar-form.navbar-left(role="Send")
+                div.form-group
+                    input.form-control(type="text",placeholder="Search",style="width:280px")
+                //button.btn.btn-default.pull-right(type="submit", style="margin-left:20px").
+                    Send
 
 block scripts
     script(src='https://cdn.socket.io/socket.io-1.3.4.js')
