--- a/SharpMod.Node/views/layout.jade
+++ b/SharpMod.Node/views/layout.jade
@@ -4,15 +4,15 @@ html
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
         title SharpMod
-        link(rel='stylesheet', type='text/css', href='/stylesheets/bootstrap.min.css')
+        link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css')
         link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
         script(src='/javascripts/modernizr-2.6.2.js')
     body
         div.container.body-content
             block content
         
-        script(src='/javascripts/jquery-2.1.3.js')
-        script(src='/javascripts/bootstrap.js')
-        script(src='/javascripts/respond.js')
+        script(src='https://code.jquery.com/jquery-2.1.3.min.js')
+        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js')
 
     block scripts
