--- a/SharpMod.Node/views/login.jade
+++ b/SharpMod.Node/views/login.jade
@@ -1,7 +1,7 @@
 ﻿extends layout    
 
 block content
-    link(rel='stylesheet', type='text/css', href='/stylesheets/select2.css')
+    link(rel='stylesheet', type='text/css', href='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/css/select2.min.css')
 
     div.row
         div.col-md-4
@@ -29,7 +29,7 @@ block content
                 iframe(src='http://www.twitchapps.com/tmi/', width="100%", height="100%")
 
 block scripts
-    script(src='/javascripts/select2.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/js/select2.min.js')
 
     script.
         $(function() {
