--- a/SharpMod.Node/views/chat.jade
+++ b/SharpMod.Node/views/chat.jade
@@ -31,10 +31,8 @@ block content
     nav.navbar.navbar-default.navbar-fixed-bottom
         div.container
             div.navbar-form.navbar-left(role="Send")
-                div.form-group
-                    input.form-control(type="text",placeholder="Search",style="width:280px")
-                //button.btn.btn-default.pull-right(type="submit", style="margin-left:20px").
-                    Send
+                form.form-group#chatForm
+                    input.form-control#chatMessage(type="text",placeholder="Send a message",style="width:280px")
 
 block scripts
     script(src='https://cdn.socket.io/socket.io-1.3.4.js')
