use modernizr from cdn

--- a/SharpMod.Node/views/layout.jade
+++ b/SharpMod.Node/views/layout.jade
@@ -6,7 +6,7 @@ html
         title SharpMod
         link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css')
         link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
-        script(src='/javascripts/modernizr-2.6.2.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js')
     body
         div.container.body-content
             block content
