--- a/SharpMod.Node/views/chat.jade
+++ b/SharpMod.Node/views/chat.jade
@@ -35,7 +35,8 @@ block content
                     input.form-control#chatMessage(type="text",placeholder="Send a message",style="width:280px")
 
 block scripts
-    script(src='https://cdn.socket.io/socket.io-1.3.4.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.4/socket.io.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js')
     script
         include ../public/javascripts/chat.js
