--- a/SharpMod.Node/views/login.jade
+++ b/SharpMod.Node/views/login.jade
@@ -1,39 +1,48 @@
-﻿extends layout    
+﻿doctype html
+html
+    head
+        meta(charset='utf-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1.0')
+        title SharpMod
+        link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css')
+        link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js')
+    body
+        div.container.body-content
+            link(rel='stylesheet', type='text/css', href='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/css/select2.min.css')
 
-block content
-    link(rel='stylesheet', type='text/css', href='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/css/select2.min.css')
+            div.row
+                div.col-md-4
+                    form(method="post", action="/")
+                        div.form-group
+                            label(for="username") Username:
+                            input.form-control(type="text", name="username", id="username", placeholder="Username", required, value="#{Username}")
 
-    div.row
-        div.col-md-4
-            form(method="post", action="/")
-                div.form-group
-                    label(for="username") Username:
-                    input.form-control(type="text", name="username", id="username", placeholder="Username", required, value="#{Username}")
+                        div.form-group
+                            label(for="password") Password:
+                            input.form-control(type="password", name="password", id="password", placeholder="Password", required, value="#{Password}")
 
-                div.form-group
-                    label(for="password") Password:
-                    input.form-control(type="password", name="password", id="password", placeholder="Password", required, value="#{Password}")
+                        div.form-group
+                            label(for="channel") Channel:
+                            div
+                                select.form-control(name="channel", id="channel", required)
+                                    for channel in Channels
+                                        option #{channel}
 
-                div.form-group
-                    label(for="channel") Channel:
-                    div
-                        select.form-control(name="channel", id="channel", required)
-                            for channel in Channels
-                                option #{channel}
+                        button.btn.btn-default(value="Login", type="submit").
+                            Login
 
-                button.btn.btn-default(value="Login", type="submit").
-                    Login
+                div.col-md-8
+                    div.embed-responsive.embed-responsive-4by3
+                        iframe(src='http://www.twitchapps.com/tmi/', width="100%", height="100%")
 
-        div.col-md-8
-            div.embed-responsive.embed-responsive-4by3
-                iframe(src='http://www.twitchapps.com/tmi/', width="100%", height="100%")
-
-block scripts
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/js/select2.min.js')
-
-    script.
-        $(function() {
-            $("#channel").select2({
-                tags: true
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/js/select2.min.js')
+        script.
+            $(function() {
+                $("#channel").select2({
+                    tags: true
+                });
             });
-        });
