--- a/SharpMod.Node/public/stylesheets/site.css
+++ b/SharpMod.Node/public/stylesheets/site.css
@@ -15,3 +15,12 @@
 .select2.select2-container.select2-container--default {
 	width: 100% !important;
 }
+
+#singleComment {
+	margin-bottom: 7px;
+	padding: 3px;
+}
+
+#commentCommands {
+	margin-left: 0;
+}
