--- a/SharpMod.Node/css/site.css
+++ b/SharpMod.Node/css/site.css
@@ -1,10 +1,11 @@
 .body-content {
 	display: none;
-	margin-bottom: 50px;
-	margin-top: 70px;
+	padding-bottom: 55px;
+	padding-top: 55px;
 }
 
 #chatMessage {
+	margin: 8px 0;
 	width: 100%;
 }
 
@@ -13,7 +14,7 @@
 }
 
 .singleComment {
-	margin-bottom: 7px;
+	margin: 3px 0 3px 7px;
 	padding: 3px;
 }
 
