port over just about everything to OpenBot

--- a/OpenBot/assets/site.css
+++ b/OpenBot/assets/site.css
@@ -1,35 +1,27 @@
 .body-content {
-	padding-bottom: 55px;
-	padding-top: 55px;
+    padding-bottom: 55px;
+    padding-top: 55px;
 }
 
 #chatMessage {
-	margin: 8px 0;
-	width: 100%;
-}
-
-.select2.select2-container.select2-container--default {
-	width: 100% !important;
+    margin: 8px 0;
+    width: 100%;
 }
 
 .singleComment {
-	margin: 3px 7px;
-	padding: 3px;
+    margin: 3px 7px;
+    padding: 3px;
 }
 
 .dropdown-menu {
-	left: inherit;
-	right: 0;
-}
-
-body {
-	overflow-y: scroll;
-}
-
-.modal-open {
-	overflow-y: scroll;
+    left: inherit;
+    right: 0;
 }
 
 #webviewWrapper {
-	height: 400px;
+    height: 400px;
+}
+
+.select2 {
+    width: 100% !important;
 }
