fix loading message

--- a/OpenBot/assets/site.css
+++ b/OpenBot/assets/site.css
@@ -27,6 +27,9 @@
 }
 
 .webview-loading {
-    margin-bottom: -100px;
     padding-top: 100px;
+}
+
+.highlight-background {
+    background-color: #F2DEDE;
 }
