--- a/OpenMod.Angular/app/views/login.html
+++ b/OpenMod.Angular/app/views/login.html
@@ -1,1 +1,17 @@
-﻿
+﻿<div class="row">
+    <div class="col-xs-12">
+        <form>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input class="form-control" id="username" placeholder="Username" type="text">
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input class="form-control" id="password" placeholder="Password" type="password">
+            </div>
+            <div class="pull-right">
+                <button class="btn btn-default" type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
+</div>
