change components to controllers and add a few other files

--- a/OpenMod.Angular/src/views/login.html
+++ b/OpenMod.Angular/src/views/login.html
@@ -1,6 +1,6 @@
 ﻿<div class="row">
     <div class="col-xs-12">
-        <form>
+        <form ng-submit="ctrl.login()">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input class="form-control" id="username" placeholder="Username" type="text">
