--- a/OpenMod.Angular/src/views/login.html
+++ b/OpenMod.Angular/src/views/login.html
@@ -1,17 +1,25 @@
-﻿<div class="row">
-    <div class="col-xs-12">
-        <form ng-submit="ctrl.login()">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input class="form-control" id="username" placeholder="Username" type="text">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input class="form-control" id="password" placeholder="Password" type="password">
-            </div>
-            <div class="pull-right">
-                <button class="btn btn-default" type="submit">Submit</button>
-            </div>
-        </form>
-    </div>
+﻿<div class="well">
+    <form class="clearfix" ng-submit="ctrl.submitCredentials()">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input class="form-control" id="username" ng-model="ctrl.username" ng-required="true" placeholder="Username (required)" type="text">
+        </div>
+
+        <div class="form-group">
+            <label for="oauth-token">OAuth Token</label>
+            <input class="form-control" id="oauth-token" ng-model="ctrl.password" ng-required="true" placeholder="OAuth Token (required)" type="password">
+        </div>
+
+        <div class="checkbox">
+            <label>
+                <input ng-model="ctrl.remember" type="checkbox"> Remember OAuth Token?
+            </label>
+        </div>
+
+        <!--<button class="btn btn-default btn-sm">Get OAuth Token</button>-->
+
+        <div class="pull-right">
+            <button class="btn btn-default btn-sm" type="submit">Submit</button>
+        </div>
+    </form>
 </div>
